[gd_scene load_steps=9 format=3 uid="uid://bdp7p8uvxrsly"]

[ext_resource type="Texture2D" uid="uid://b0u3srggt8s74" path="res://Assets/SF1/ShiningForceTextBackground.png" id="2"]
[ext_resource type="Script" path="res://General/BattleActionsMenu/InventoryMenu/InventoryMenu.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://wflaq4juq53c" path="res://Assets/SFCD/Genesis 32X SCD - Shining Force CD Sega CD - Icons.png" id="4"]

[sub_resource type="Animation" id="1"]
resource_name = "DropMenuOption"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DropActionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="2"]
resource_name = "EquipMenuOption"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EquipActionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="3"]
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GiveActionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="4"]
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UseActionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3xq7"]
_data = {
"DropMenuOption": SubResource("1"),
"EquipMenuOption": SubResource("2"),
"GiveMenuOption": SubResource("3"),
"UseMenuOption": SubResource("4")
}

[node name="BattleInventoryMenuRoot" type="Node2D"]
script = ExtResource("3")

[node name="UseActionSprite" type="Sprite2D" parent="."]
position = Vector2(36, 12)
texture = ExtResource("4")
vframes = 2
region_enabled = true
region_rect = Rect2(168, 136, 24, 48)

[node name="GiveActionSprite" type="Sprite2D" parent="."]
position = Vector2(12, 24)
texture = ExtResource("4")
vframes = 2
region_enabled = true
region_rect = Rect2(200, 136, 24, 48)

[node name="EquipActionSprite" type="Sprite2D" parent="."]
position = Vector2(60, 24)
texture = ExtResource("4")
vframes = 2
region_enabled = true
region_rect = Rect2(232, 136, 24, 48)

[node name="DropActionSprite" type="Sprite2D" parent="."]
position = Vector2(36, 36)
texture = ExtResource("4")
vframes = 2
region_enabled = true
region_rect = Rect2(264, 136, 24, 48)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 84.0
offset_top = 24.0
offset_right = 180.0
offset_bottom = 48.0
texture = ExtResource("2")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 0
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 8.0
offset_right = -6.0
offset_bottom = -6.0
text = "TEST"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k3xq7")
}
